message C2R_PhoneLogin // IRequest
{
	required string	Phone	 = 1;	// 手机号
	required string	Code = 2;		// 验证码
	required string	Token = 3;
	required string	MachineId = 4;
	required string	ChannelName = 5;
	required string	ClientVersion = 6;
}

message R2C_PhoneLogin // IResponse
{
	required string Address = 1;
	required int64 	Key	    = 2;
	required string Token	= 3;
}

message C2R_ThirdLogin // IRequest
{
	required string	Third_Id	 = 1;
	required string	MachineId = 2;
	required string	ChannelName = 3;
	required string	ClientVersion = 4;
}

message R2C_ThirdLogin // IResponse
{
	required string Address = 1;
	required int64 	Key	    = 2;
}

message Actor_ForceOffline // IActorMessage
{
}

message C2R_SendSms // IRequest
{
	required string	Phone	 = 1;	// 手机号
}

message R2C_SendSms // IResponse
{
}

message C2R_Login // IRequest
{
	required string	Account	 = 1;	// 帐号
	required string	Password = 2;	// 密码
}

message R2C_Login // IResponse
{
	required string Address = 1;
	required int64 	Key	    = 2;
}

message C2R_Register // IRequest
{
	required string	Account	 = 1;	// 帐号
	required string	Password = 2;	// 密码
}

message R2C_Register // IResponse
{
}

message C2G_LoginGate // IRequest
{
	required int64 Key = 1;	// 帐号
}

message G2C_LoginGate // IResponse
{
	required int64 PlayerId = 1;
	required int64 Uid = 2;//用户ID
	repeated ShopInfo ShopInfoList = 3;//商店商品
	repeated TaskInfo TaskInfoList = 4;//任务列表
}

message G2C_TestHotfixMessage // IMessage
{
	required string Info = 1;
}

message C2M_TestActorRequest // IActorRequest
{
	required string Info = 1;
}

message M2C_TestActorResponse // IActorResponse
{
	required string Info = 1;
}

message PlayerInfo // IMessage
{
	required string Name = 1;//用户名称
	required int64 GoldNum = 2;//金币数量
	required int64 WingNum  = 3;//元宝数量
	required string Icon = 4;//用户头像
}

message ShopInfo //IMessage
{
	required long Id = 1;//物品ID
	required int ShopType = 2;//商品类型
	required string Name = 3;//商品名称
	required string Desc = 4;//商品介绍
	required int Price = 5;//商品单价
	required int CurrencyType = 6;//商品图标
}

message TaskProgress //IMessage
{
	required int TaskId = 1;
	required int Progress = 2;
	required int Target = 3;
	required bool IsComplete = 4;//是否已经完成
	required bool IsGet = 5;//是否领取奖励
}

message C2G_UpdateTaskProgress //IRequest
{
	required long UId = 1;
	required TaskInfo TaskPrg = 2;
}

message G2C_UpdateTaskProgress //IResponse
{
	required TaskInfo TaskPrg = 1;
}

message C2G_Task //IRequest
{
	required long uid = 1;
}

message G2C_Task //IResponse
{
	repeated TaskInfo TaskProgressList = 1;
}

message TaskInfo //IMessage
{
	required int Id = 1;//任务ID
	required string TaskName = 2;//任务名称
	required string Desc = 3;//任务描述
	required int Reward = 4;//任务达到之后的奖励
	required int Target = 5;//任务完成目标
	required int Progress = 6;//当前进度
	required bool IsComplete = 7;//是否已经完成
	required bool IsGet = 8;//是否获取
}

message C2G_PlayerInfo // IRequest
{
	required long uid = 1;//用户ID
}

message G2C_PlayerInfo // IResponse
{
	required PlayerInfo PlayerInfo = 1;
}

message C2G_EnterRoom //IRequest
{
	
}

message G2C_EnterRoom //IResponse
{
	
}

#region Map-Client

message GamerInfo //IMessage
{
 	required int64 UserID = 1;
    required bool IsReady = 2;
    required int  SeatIndex = 3;
}

message G2M_PlayerEnterRoom //IRequest
{
	required int64 UserId = 1;
	required int64 SessionId = 2;
	required int64 PlayerId = 3;
}

message M2G_PlayerEnterRoom //IResponse
{
	required int64 GameId = 1;
}

message Actor_GamerEnterRoom // IActorMessage
{
    repeated GamerInfo Gamers = 1;
}

message G2M_PlayerExitRoom //IRequest
{
	required int64 UserId = 1;
	required int64 GameId = 2;
}

message M2G_PlayerExitRoom //IResponse
{
	required int64 GameId = 1;
}

message C2G_UpdatePlayerInfo //IRequest
{
	required long Uid = 1;
	required PlayerInfo playerInfo = 2;
}

message G2C_UpdatePlayerInfo //IResponse
{
	required PlayerInfo playerInfo = 1;
}

message C2M_ActorGamerEnterRoom // IActorRequest
{
	required string Info = 1;
}

message M2C_ActorGamerEnterRoom // IActorResponse
{
	required string Info = 1;
}


message Actor_GamerExitRoom // IActorMessage
{
    required long Uid = 1;
    required bool IsFromClient = 2;
}

message M2G_Actor_GamerExitRoom // IActorMessage
{
   
}

message Actor_GamerReady // IActorMessage
{
    required long Uid = 1;
}

message Actor_StartGame // IActorMessage
{
    repeated MahjongInfo Mahjongs = 1;
}

message Actor_ChangeTable // IActorMessage
{
    optional long Uid = 1;
}

message Email //IMessage
{
	required string EmailTitle = 1;//邮件标题
	required string Content = 2;//邮件内容
	required string Date = 3;//邮件日期
	required bool IsRead = 4;//是否已经读过
	required string RewardItem = 5;//奖励物品
	required long EId = 6;//邮箱ID
}

message C2G_Email //IRequest
{
	required long Uid = 1;//用户ID
}

message G2C_Email //IResponse
{
	repeated Email EmailInfoList = 1;//邮件列表
}

message C2G_UpdateEmail //IRequest
{
	required long EId = 1;
	required bool IsRead = 2;
}

message G2C_UpdateEmail //IResponse
{
	required long EId = 1; 
}

message C2G_DailySign // IRequest
{
	required long	Uid	 = 1;
}

message G2C_DailySign // IResponse
{
	required string Reward = 1;
}

#endregion